# Author-Identifier

./: .dockerignore  .env  .gitignore  Dockerfile  GUI_streamlit.py  Identifier_GUI.py  Identify_streamlit.py  LICENSE  README.md  author_works.txt  author_works2.txt  chatbot & generator.py  chatbot api.ipynb  chatbot_with_generator.py  clean_text.py  docker-compose.yml  env.sh  generate.py  generate_with_chatbot.py  identify.py  infer.py  pyproject.toml  test_texts.json  testganprompt.ipynb  train.ipynb  train.py  trainseq.py  use_model.py  validate.py
author_identifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/Charles_Dickens/: A Christmas Carol.txt  A Tale of Two Cities.txt  American Notes.txt  Bleak House.txt  David Copperfield.txt  Great Expectations.txt  Hard Times.txt  Oliver Twist.txt
data/Charlotte Bronte/: Jane_Eyre.txt  Shirly.txt
data/Charlotte_Brontë/: Biographical Notes on the Pseudonymous Bells.txt  Jane Eyre An Autobiography.txt  Poems by Currer, Ellis, and Acton Bell.txt  Shirley.txt  The Professor.txt  The twelve adventurers, and other stories.txt  Villette.txt
data/Honoré_de_Balzac/: Eugenie Grandet.txt  Father Goriot.txt  Sarrasine.txt  The Human Comedy Introductions and Appendix.txt  The Magic Skin.txt  The Unknown Masterpiece.txt
data/Jane_Austen/: Emma.txt  Mansfield Park.txt  Northanger Abbey.txt  Persuasion.txt  Pride and Prejudice.txt  Sense and Sensibility.txt
data/Joseph_Conrad/: Heart of Darkness.txt  Lord Jim.txt  Nostromo A Tale of the Seaboard.txt  Tales of Unrest.txt  The Secret Agent A Simple Tale.txt  The Secret Sharer.txt  The nigger of the Narcissus.txt  Victory An Island Tale.txt  Youth, a Narrative.txt
data/Maugham/: Of_Human_Bondage.txt  The_Moon_ And_ Sixpence .txt
data/Márquez/: In_Evil_Hour.txt
data/O Henry/: O Henry.txt
data/O._Henry/: Cabbages and Kings.txt  Heart of the West [Annotated].txt  Roads of Destiny.txt  Sixes and Sevens.txt  Strictly Business More Stories of the Four Million.txt  The Four Million.txt  The Gentle Grafter.txt  The Gift of the Magi.txt  The Trimmed Lamp, and Other Stories of the Four Million.txt  Waifs and strays [part 1].txt  Whirligigs.txt
data/W._Somerset_Maugham/: Liza of Lambeth.txt  Mrs. Craddock.txt  Of Human Bondage.txt  Orientations.txt  The Circle A Comedy in Three Acts.txt  The Magician.txt  The Merry-go-round.txt  The Moon and Sixpence.txt  The Painted Veil.txt  The Trembling of a Leaf Little Stories of the South Sea Islands.txt
data_train/Agatha_Christie/: Poirot Investigates.txt  The Murder on the Links.txt  The Mysterious Affair at Styles.txt  The Secret Adversary.txt  The murder of Roger Ackroyd.txt
data_train/Alexandre_Dumas/: The black tulip.txt  The three musketeers.txt
data_train/Arthur_Conan_Doyle/: A Study in Scarlet.txt  The Adventures of Sherlock Holmes.txt  The Lost World.txt  The Sign of the Four.txt  The Valley of Fear.txt
data_train/Charles_Dickens/: A Tale of Two Cities.txt  Oliver Twist.txt
data_train/Charlotte_Brontë/: Villette.txt  (+1 more)
tools/: HuggingFaceApi.ipynb  HuggingFaceApi.py  HuggingFaceUpload,py  HuggingFaceUpload.ipynb  HuggingFaceUpload.py  chatbot_api.py  clean_content.py  crawl.py  crawl2.py  parameter_tuning.py  pdf_to_txt.py
(+26 files in other folders)
