[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# 项目设置 -----------------------------------------------------------------------------------------------------
[project]
name = "author_identifier"
dynamic = ["version"]
description = "A project for author identification using machine learning."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine-learning", "deep-learning", "AI", "author-identification"]
authors = [
    { name = "Zhu Yihang", email = "E1351358@u.nus.edu" }
]
maintainers = [
    { name = "Zhu Yihang", email = "E1351358@u.nus.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
]

# 必需依赖项 -----------------------------------------------------------------------------------------------------
dependencies = [
    "numpy>=1.23.0,<=2.1.2",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    
    # PyTorch默认安装的是CPU版本，GPU版本请使用env.sh文件内的指令
    "torch>=1.8.0,!=2.4.0; sys_platform == 'win32'",
    "torchvision>=0.9.0",
    "torchaudio>=0.8.0",
    "tqdm>=4.64.0",
    "psutil",  # 系统资源监控
    "py-cpuinfo",  # CPU信息显示
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "ultralytics-thop>=2.0.0",
    "ipykernel",
    "ipywidgets>=7.6.0",
    "transformers",
    "scikit-learn",
]

# 可选依赖项 -----------------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]

[tool.setuptools]
packages = { find = { where = ["."] } }